public/styles/main.css
/* ==========================================================================
   Base styles
   ========================================================================== */

@import "fonts.css";

body {
  margin: 0;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
  color: white;
  display: inline-block;
  z-index: 10;
}

ul li {
  display: inline-block;
  padding: 28px 24px;
  position: relative;
}

ul li:hover {
  background-color: white;
}

ul li:hover > a {
  color: #ec008c;
}

ul ul {
  position: absolute;
  left: 0;
  top: 100%;
  display: none;
}

ul ul li {
  display: block;
  color: black;
  background-color: white;
  white-space: nowrap;
  padding: 12px 24px;
}

ul ul li:hover {
  background-color: #eee;
}

ul ul li:hover a{
  color: #ec008c;
}

nav {
  display: inline-block;
  font-family: HUGEAvantGardeBold;
  letter-spacing: -0.06em;
}

nav a {
  text-decoration: none;
  color: white;
}

.clearfix:before,
.clearfix:after {
  content: " ";
  /* 1 */
  display: table;
  /* 2 */
}

.clearfix:after {
  clear: both;
}

.clearfix {
  *zoom: 1;
}

.show {
  display: block;
}

.hide {
  display: none;
}

/* ==========================================================================
   Custom styles
   ========================================================================== */

/* ==========================================================================
   Header/Navigation
   ========================================================================== */

.masthead {
  background-color: #ec008c;
  height: 72px;
  width: 100%;
  position: relative;
  z-index: 12;
}

.masthead img {
  vertical-align: middle;
}

.header-logo {
  width: 60px;
  padding: 24px 24px;
}

.nestedlist,
.nestedlist:hover {
  background: white;
}

.nestedlist a {
  color: #ec008c;
}

.nestedlist .secondary {
  display: block;
}

.secondary {
  display: none;
}

.secondary a {
  font-family: Galaxie;
  font-size: 12px;
  color: black;
}

/* ==========================================================================
   Main Section
   ========================================================================== */

.mask {
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 0; 
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: opacity 0.25s ease; 
          transition: opacity 0.25s ease; 
  z-index: 1;
}

.show-mask {
  opacity: 1;
}

.hero {
  position: relative;
}

.hero h1 {
  color: white;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%);
  margin: 0;
  font-family: HUGEAvantGardeBold;
  font-size: 90px;
  text-align: center;
  z-index: 0;
}

.hero-img {
  width: 100%;
}

.copy {
  font-family: Galaxie;
  font-size: 20px;
  width: 968px;
  margin: 0 auto;
  padding: 60px 0;
}

.copy h1 {
  display: none;
}

/* ==========================================================================
   Media queries
   ========================================================================== */

@media (max-width:767px) {
  /* ==========================================================================
   Base styles
   ========================================================================== */

  ul {
    background-color: white;
    position: absolute;
    width: 100%;
    top: 60px;
    height: 100%;
    -webkit-box-sizing: border-box;
  }

  ul li {
    display: list-item;
    padding: 12px 24px;
  }

  ul li:hover {
    background-color: #eee;
  }

  ul li:hover > a {
    color: black;
  }

  ul ul {
    position: relative;
  }

  ul ul li {
    width: inherit;
  }

  nav a {
    color: black;
  }

  /* ==========================================================================
   Custom styles
   ========================================================================== */


  /* ==========================================================================
   Header/Navigation
   ========================================================================== */

  .masthead {
    height: 60px;
  }

  .hamburger {
    display: block;
    height: 60px;
  }

  .header-mobile {
    width: 50px;
    padding: 1.25em 1.5em;
    display: block;
  }

  .header-logo {
    display: none;
  }

  .nestedlist a {
    color: black;
  }

  .nestedlist .secondary {
    -webkit-transform: translateX(-24px);
            transform: translateX(-24px);
  }

  .chevron.nestedlist::after {
    -webkit-transform: rotate(270deg);
            transform: rotate(270deg);
    top: -10px;
    right: 1.5%;
  }

  .chevron::after {
    content: "\232A";
    display: block;
    position: absolute;
    right: 3%;
    color: #ec008c;
    font-size: 2em;
    top: 10px;
    z-index: 10;
    -webkit-transform: rotate(90deg);
            transform: rotate(90deg);
  }

  /* Slide Navigation Styles */

  .site-wrapper {
    position: relative;
    overflow: hidden;
    width: 100%;
  }

  .site-canvas {
    width: 100%;
    height: 100%;
    position: relative;
    -webkit-transform: translateX(0);
            transform: translateX(0);
    -webkit-transition: .3s ease all;
            transition: .3s ease all;
  }

  .site-menu {
    width: 85%;
    height: 100%;
    position: fixed;
    top: 0;
    left: -85%;
    background: #ec008c;
    overflow-y: scroll;
    -webkit-box-sizing: border-box;
  }

  .site-wrapper.show-nav .site-canvas {
    -webkit-transform: translateX(85%);
            transform: translateX(85%);
  }

  .show-nav .mask {
    opacity: 1;
  }

  .show-nav .hamburger {
    display: none;
  }

  .show-nav .close {
    display: block;
    height: 60px;
  }

  /* ==========================================================================
   Main Section
   ========================================================================== */

  .hero h1 {
    display: none;
  }

  .hero-img {
    height: 240px;
  }

  .copyright {
    color: black;
    font-family: Helvetica;
    font-size: 10px;
    display: block;
    bottom: 5%;
    left: 0;
    position: absolute;
    z-index: 11;
    padding: 0 24px;
    letter-spacing: .08px;
  }

  .copy {
    width: 100%;
    font-size: 16px;
    padding: 0 24px;
    -webkit-box-sizing: border-box;
  }

  .group {
    text-align: justify;
  }

  .group h1 {
    display: block;
    padding: 50px 0;
    color: black;
    font-size: 40px;
    position: relative;
    text-align: left;
    font-family: HUGEAvantGardeBold;
    margin: 0;
  }
}

